<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_theme" />
    <Preference
        android:key="@string/theme_pref_key"
        android:layout="@layout/preference_theme_mode" />
    <!--    Links which contains only github Link-->
    <PreferenceCategory android:layout="@layout/preference_link" />
    <Preference android:layout="@layout/preference_link_github">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/link_repository" />
    </Preference>
    <PreferenceCategory android:layout="@layout/preference_about" />
    <!--Shreyas Patil Contrib links-->
    <Preference android:layout="@layout/preference_about_contributor_1">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/link_contributor_1" />
    </Preference>
    <!--Rohan Singh Contrib Links-->
    <Preference android:layout="@layout/preference_about_contributor_2">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/link_contributor_2" />
    </Preference>
    <!--Designer link-->
    <Preference android:layout="@layout/preference_about_designer">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/link_designer" />
    </Preference>
    <!--Version Number-->
    <Preference android:layout="@layout/preference_about_version" android:selectable="false"/>
</PreferenceScreen>