<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_4"
    tools:context=".ui.main.MainActivity">

    <!--    Confirmed Card view Tab-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/confirmedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_4"
        app:layout_constraintBottom_toTopOf="@+id/recoverLayout"
        app:layout_constraintEnd_toStartOf="@+id/activeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_8">

            <ImageView
                android:id="@+id/imageView2"
                style="@style/ImageIcon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/confirmed"
                android:src="@drawable/ic_virus"
                android:tint="@color/color_confirmed"
                app:layout_constraintBottom_toTopOf="@+id/textConfirmed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/confirmed"
                android:src="@drawable/ic_trending_up"
                android:tint="?colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textNewConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@color/colorTextDefault"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="[1138]" />

            <TextView
                android:id="@+id/textConfirmed"
                style="@style/TextCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_confirmed"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:text="1138" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/confirmed"
                android:textColor="@color/color_confirmed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textConfirmed"
                app:layout_constraintStart_toStartOf="@+id/textConfirmed"
                app:layout_constraintTop_toBottomOf="@+id/textConfirmed" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupNewConfirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="imageView,textNewConfirmed" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--  Active Card view Tab -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_4"
        app:layout_constraintBottom_toTopOf="@+id/deathLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirmedLayout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_8">

            <ImageView
                android:id="@+id/imageView3"
                style="@style/ImageIcon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/active"
                android:src="@drawable/ic_patient"
                android:tint="@color/color_active"
                app:layout_constraintBottom_toTopOf="@+id/textActive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textActive"
                style="@style/TextCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_active"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                tools:text="1138" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/active"
                android:textColor="@color/color_active"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textActive"
                app:layout_constraintStart_toStartOf="@+id/textActive"
                app:layout_constraintTop_toBottomOf="@+id/textActive" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--  Recovered Card view Tab -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recoverLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_4"
        app:layout_constraintBottom_toBottomOf="@+id/deathLayout"
        app:layout_constraintEnd_toStartOf="@+id/deathLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmedLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_8">

            <ImageView
                android:id="@+id/imageView4"
                style="@style/ImageIcon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/recovered"
                android:src="@drawable/ic_heart"
                android:tint="@color/color_recovered"
                app:layout_constraintBottom_toTopOf="@+id/textRecovered"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/recovered"
                android:src="@drawable/ic_trending_up"
                android:tint="?colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textNewRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@color/colorTextDefault"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                tools:text="[1138]" />

            <TextView
                android:id="@+id/textRecovered"
                style="@style/TextCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_recovered"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                tools:text="1138" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/recovered"
                android:textColor="@color/color_recovered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textRecovered"
                app:layout_constraintStart_toStartOf="@+id/textRecovered"
                app:layout_constraintTop_toBottomOf="@+id/textRecovered" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupNewRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="imageView5,textNewRecovered" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!--  Death Card view Tab -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/deathLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recoverLayout"
        app:layout_constraintTop_toBottomOf="@+id/activeLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_8">

            <ImageView
                android:id="@+id/imageView6"
                style="@style/ImageIcon"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/deaths"
                android:src="@drawable/ic_death"
                android:tint="@color/color_death"
                app:layout_constraintBottom_toTopOf="@+id/textDeceased"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/deaths"
                android:src="@drawable/ic_trending_up"
                android:tint="?colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textNewDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@color/colorTextDefault"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                tools:text="[1138]" />


            <TextView
                android:id="@+id/textDeceased"
                style="@style/TextCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_death"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                tools:text="1138" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/deaths"
                android:textColor="@color/color_death"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textDeceased"
                app:layout_constraintStart_toStartOf="@+id/textDeceased"
                app:layout_constraintTop_toBottomOf="@+id/textDeceased" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupNewDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="textNewDeaths,imageView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
